# Smart-Pest-Guardian

./: .gitignore  README.md  pyproject.toml  requirements.txt  temp_count.py  temp_eval.py
.cph/: .test.py_d934c9e2bb0071fae2bd6c407f9c474b.prob
data/processed/forecasting/: pest_incidents_daily_integration.csv
reports/: generate_week_visuals.py  section3_week_linkage.pptx
reports/drafts/: report_outline.md  report_template.md
reports/metrics/detector/: analyze_aug_diff.py  create_augmentation_comparison.py  dataset_balance_summary.json  generate_class_counts.py  generate_test_counts.py  test_split_counts.csv  yolov8-pest-extended-frac50_20251008_202436_results.csv  yolov8-pest-extended-frac50_20251008_202436_summary.json  yolov8-pest-extended-frac50_20251008_202436_summary.md  yolov8-pest-long_20251006_124917_results.csv  yolov8-pest-long_20251006_124917_summary.json  (+4 more)
reports/presentation/: slide_outline.md  video_script.md
scripts/: download_data.py  generate_mock_detection_dataset.py  prepare_detection_dataset.py  run_pipeline.py
src/apps/: what_if_dashboard.py
src/data/: __init__.py  download.py  preprocess.py
src/detection/: __init__.py  balance_dataset.py  create_test_split.py  predict.py  train.py
src/evaluation/: __init__.py  explainability.py  metrics.py  report.py
src/forecasting/: __init__.py  baselines.py  dataset.py  predict.py  train_lstm.py  train_tft.py  tune_lstm.py
src/visualization/: __init__.py  dashboard.py
tests/: test_download_conversion.py  test_sequence_dataset.py
tmp/: inspect_results.py  list_class_samples.py
(+1137 files in other folders)
