[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-pest-guardian"
version = "0.1.0"
description = "Pipeline for intelligent pest detection and outbreak forecasting"
authors = [
    { name = "AI Final Project Team" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ultralytics>=8.2.0",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "torchaudio>=2.2.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "streamlit>=1.32.0",
    "typer>=0.12.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.0",
    "rich>=13.7.0",
    "tqdm>=4.66.0",
    "opencv-python>=4.9.0",
    "shap>=0.44.0",
    "pillow>=10.2.0",
    "albumentations>=1.4.0"
]

[project.optional-dependencies]
forecasting = [
    "pytorch-lightning>=2.2.0",
    "pytorch-forecasting>=1.0.0",
    "pytorch-tabnet>=4.1.0"
]
dev = [
    "black>=24.4.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.9.0",
    "pytest>=8.1.0",
    "pytest-cov>=4.1.0"
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
